# humantime

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: build-artifacts.yml
humantime/: localise.py
humantime/translations/: en-US.json
src/humantime/: __init__.py  localise.py
src/humantime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_humantime.py  test_humantime_localise.py
test/test/: test-lang.json
